# pixel-brain

./: .gitignore  README.md  pyproject.toml  requirements.txt  requirements_3.10.txt  requirements_3.8.txt  requirements_3.8_ubuntu20.txt  requirements_3.9.txt  requirements_no_blinker.txt  setup.py
.github/workflows/: ci.yaml
apps/: tag_identity.py
scripts/: identity_detector_tuner.py  run_unit_tests.sh
src/pixelbrain/: data_loader.py  database.py  mongo_pipelines.py  pipeline.py  utils.py
src/pixelbrain/apps/: filter_db.py  hue_process.py  tag_identity.py
src/pixelbrain/data_loaders/: cloudinary_dataloader.py  s3_dataloader.py
src/pixelbrain/database_processors/: xgboost_processor.py  xgboost_ranker_estimator.py
src/pixelbrain/database_proecessors/: xgboost_processor.py
src/pixelbrain/modules/: embedders.py  embedding_dsitance_scorer.py  face_extractor.py  gpt4v.py  grounded_sam_detector.py  hogs_people_detector.py  identifying_strategies.py  image_save.py  images_of_person_finder.py  people_identifier.py  pick_scorer.py  ssim_duplicate_filter.py  upload.py  upload_to_cloudinary.py
src/pixelbrain/notebooks/: sam_facenet_notebook.ipynb  sam_notebook.ipynb  xgboost_processor_notebook.ipynb  xgboost_ranker_best_model.json
src/pixelbrain/pipelines/: face_similarity_pipeline.py  hue_processing_pipeline.py  (+3 more)
src/tests/: mockery.py  test_cloudinary_dataloader.py  test_database.py  test_dataloader.py  test_face_extractor.py  test_facenet_embedder.py  test_gpt4v_people_detector.py  test_grounded_sam.py  test_hogs_people_detector.py  test_hue_preprocessing_pipeline.py  test_image_save_module.py  test_people_identifier.py  test_pipelines.py  test_preprocessors.py  test_resnet_classifier.py  test_s3_dataloader.py  test_utils.py  utils.py
(+76 files in other folders)
