[project]
name = "pixelbrain"
version = "0.1"
description = "A package for processing image data using ML models"
authors = [{name = "Omer Hacohen", email = "omerhac94@gmail.com"}]
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*"]

[project.scripts]
tag_identity = "pixelbrain.apps.tag_identity:main"
filter_db = "pixelbrain.apps.filter_db:main"
tag_zalando = "pixelbrain.apps.zalando.tag_zalando_metadata:main"