[project]
name = "pixelbrain"
version = "0.1"
description = "A package for processing image data using ML models"
authors = [{name = "Omer Hacohen", email = "omerhac94@gmail.com"}]
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*"]

[project.scripts]
tag_identity = "pixelbrain.apps.tag_identity:main"
hue_process = "pixelbrain.apps.hue_process:main"
tag_fashion = "pixelbrain.apps.fashion_tagging_pipeline.tag_fashion_dataset:main"